2004-02-03    <layer@HOBART>

	* Makefile: have `clean' do it in configure/, too

2004-02-03    <dancy@CANDY2K>

	* configure/nfs-server-io.cl: Changed secret function numbers to
	correspond with changes in nfs.cl
	(should parameterize these into a common file).

	* sunrpc.cl (read-record): Use new read-complete-vector function.
	
	* nfs.cl (nfsd-message-handler): Changed secret function numbers
	from 10001234/t to 100/101.

	* loadem.cl (buildit): Re-added 7.0 command line conditionalization.

2004-02-03    <dancy@CANDY2K>

	* loadem.cl (buildit): Removed a 7.0 conditionalization.
	Hopefully the required command line args will be available by the
	time the next 7.0 testing occurs.
	
2004-02-03    <dancy@CANDY2K>

	* Version 2.0 Changelog begins here.  There have been many
	changes.  Too numerous to lay out here.

2004-02-03    <dancy@CANDY2K>

	* mountd.cl: Don't care about authentication type in mountd.

	* portmap.cl:  unset mappings before setting (questionable).
	
2004-01-20  Kevin Layer  <layer@gemini>

	* binary-license.txt: updated

2003-12-15    <dancy@CANDY2K>

	* Makefile:  Added rules for making demo distributions.  

	* loadem.cl: Make the program name "Allegro NFS Server demo" or
	"Allegro NFS Server".
	
	* nfs.nsi: If "install as service" option is used.. and there is
	an existing nfs.cfg file, start the service after installing.  

	If installing as a service, remove any existing service first.

2003-12-12    <dancy@CANDY2K>

	* nfs.nsi: New installer script.

	* Makefile: Added instructions to build installer.

	* loadem.cl: Added additional command line arguments for starting
	and stopping the service.  Added /quiet switch for /install,
	/remove, /start, and /stop for use in the install script.
	Former call to start-service is now execute-service.

2003-12-03    <dancy@DANCYSOFT>

	* nfs.cl: Fixed
	dircache-out-of-date-after-creating-file-in-empty-directory bug.
	
2003-12-03    <layer@HOBART>
